<?xml version="1.0"?>
<package>
  <name>teensy_test</name>
  <version>0.1.0</version>
  <description>The teensy_test package is an example of usage of the 
    ros_teensy cross-compilation toolchain package.</description>

  <maintainer email="david.lavoie-boutin@mail.mcgill.ca">David Lavoie-Boutin</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend> 
  <run_depend>message_runtime</run_depend> 

  <build_depend>ros_teensy</build_depend>
  <build_depend>rosserial_arduino</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>ros_teensy</run_depend>
  <run_depend>rosserial_arduino</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
